fixed white border on iphones

--- a/source/stylesheets/components/_cover.sass
+++ b/source/stylesheets/components/_cover.sass
@@ -21,12 +21,12 @@
   color: #FFB2D2
   font-weight: bold
   left: 50%
-  margin-left: -200px
+  margin-left: -160px
   position: absolute
   text-align: center
   text-transform: uppercase
   top: 180px
-  width: 400px
+  width: 320px
 
   @media all and (max-width: 700px)
     top: 68px
